# Doubletapp-Django

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  config.yml  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test.Dockerfile  ua_config.yml
nginx/: Dockerfile  nginx.conf  nginx.conf.template
src/: db.sqlite3
src/app/: admin.py  models.py
src/app/internal/: api.py  bot.py  logs.py  metrics.py  serializers.py  urls.py
src/app/internal/admin/: admin_bank.py  admin_history.py  admin_user.py
src/app/internal/db/models/: history_data.py  user_data.py
src/app/internal/db/repositories/: account_repository.py  card_repository.py  transaction_repository.py  user_repository.py
src/app/internal/domain/schemas/: accounts.py  auth.py  cards.py  error_handler.py  users.py
src/app/internal/domain/services/: CustomErrors.py  account_service.py  bank_services.py  card_service.py  history_service.py  s3_service.py  user_service.py
src/app/internal/models/: bank_data.py  history_data.py  user_data.py
src/app/internal/presentation/admin/: admin_bank.py  admin_history.py  admin_user.py
src/app/internal/presentation/bot/: handlers.py
src/app/internal/presentation/rest/: accounts.py  cards.py  tokens.py  users.py
src/app/internal/services/: CustomErrors.py  bank_services.py  history_service.py  user_service.py
src/app/internal/transport/bot/: handlers.py
src/app/management/commands/: run_bot.py
src/app/migrations/: 0002_userdata.py  0003_bankaccount_bankcard_telegramuser_delete_userdata_and_more.py  0004_remove_bankcard_available_balance_and_more.py  0004_telegramuser_list_of_favourites.py  0005_remove_bankcard_available_balance.py  0005_transactionhistory.py  0006_alter_bankcard_number_and_more.py  0006_telegramuser_date_joined_telegramuser_first_name_and_more.py  0007_bankaccount_price_gte_0.py  0007_telegramuser_is_staff_alter_telegramuser_is_active_and_more.py  0008_transactionhistory_is_viewed_and_more.py  0009_remove_transactionhistory_photo_name_and_more.py
src/config/: settings.py  urls.py
src/templates/: account_history.html  command_accounts.html  command_all_users.html  command_cards.html  command_favourites.html  command_help.html  command_me.html  command_send_money.html  command_start.html  favorite_error.html  phone_error.html  register_error.html  unseen_receipt.html
tests/: conftest.py
tests/integration/: api_test.py  callbacks_test.py
tests/integration/api/: api_accounts_test.py  api_cards_test.py  api_tokens_test.py  api_users_test.py
tests/integration/callback/: account_history_test.py  accounts_test.py  add_favorite_test.py  all_users_test.py  cards_test.py  del_favorite_test.py  favourites_test.py  help_test.py  me_link_test.py  me_test.py  message_test.py  send_money_test.py  set_phone_test.py  start_test.py
tests/integration/services/: s3_service_test.py
tests/smoke/: bot_test.py  django_test.py
tests/unit/: api_test.py
unified_agent/: Dockerfile  app_config.yml  config.yml
(+1 files in other folders)
